--- a/style.css
+++ b/style.css
@@ -1,29 +1,35 @@
 title {
+    text-align: center;
     line-height: 70px;
     font-size: 60px
 
 }
 h1 {
+    text-align: center;
     line-height: 50px;
     font-size: 46px
 }
 
 h2 {
+    text-align: center;
     line-height: 36px;
     font-size: 30px
 }
 
 h3 {
+    text-align: center;
     line-height: 30px;
     font-size: 24px
 }
 
 h4 {
+    text-align: center;
     line-height: 26px;
     font-size: 21px
 }
 
 h5 {
+    text-align: center;
     line-height: 22px;
     font-size: 18px;
     font-weight: 400;
